manifests/northpole/santablog/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: santablog 
  namespace: northpole 
  labels:
    app: santablog
spec:
  to:
    kind: Service
    name: santablog-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
